test/modules/use/issue-19219.chpl
module M {
  var M: int;
}

module N {
  use M;

  proc main() {
    writeln(M);
  }
}
